--- a/package.json
+++ b/package.json
@@ -4,27 +4,33 @@
   "description": "A collection of react components based on MUI.",
   "author": "DLS",
   "license": "ISC",
-
   "repository": {
     "type": "git",
     "url": "https://github.com/DiamondLightSource/sci-react-ui.git"
   },
-
   "scripts": {
-    "rollup": "rollup --config rollup.config.mjs"
+    "rollup": "rollup --config rollup.config.mjs",
+    "jest": "jest --config jest.config.js"
   },
-
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
-
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.25.9",
+    "@babel/preset-typescript": "^7.26.0",
     "@rollup/plugin-commonjs": "^28.0.1",
     "@rollup/plugin-image": "^3.0.3",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.1",
+    "@testing-library/react": "^16.0.1",
+    "@types/jest": "^29.5.14",
     "@types/react": "^18.3.12",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "react": "^18.3.1",
     "rollup": "^4.24.4",
     "rollup-plugin-dts": "^6.1.1",
