--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "url": "https://github.com/DiamondLightSource/sci-react-ui.git"
   },
   "scripts": {
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview",
     "rollup": "rollup --config rollup.config.mjs",
     "jest": "jest --config jest.config.js",
     "storybook": "storybook dev -p 6006",
@@ -17,6 +21,17 @@
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
+  "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.6",
+    "@mui/material": "^6.1.6",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.10.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
@@ -35,27 +50,24 @@
     "@storybook/addon-webpack5-compiler-swc": "^1.0.5",
     "@storybook/blocks": "^8.4.2",
     "@storybook/react": "^8.4.2",
+    "@storybook/react-vite": "8.4.2",
     "@storybook/react-webpack5": "^8.4.2",
     "@storybook/test": "^8.4.2",
     "@testing-library/react": "^16.0.1",
     "@types/jest": "^29.5.14",
+    "@types/node": "^20.17.6",
     "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.3",
     "babel-jest": "^29.7.0",
+    "file-loader": "^6.2.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "react": "^18.3.1",
-    "rollup": "^4.24.4",
+    "rollup": "^4.26.0",
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "storybook": "^8.4.2",
-    "tslib": "^2.8.1",
-    "typescript": "^5.6.3"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0",
-    "@mui/material": "^6.1.6",
-    "react-dom": "^18.3.1"
+    "tslib": "^2.8.1"
   }
 }
