--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
     "url": "https://github.com/DiamondLightSource/sci-react-ui.git"
   },
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "tsc -b && rollup --config rollup.config.cjs",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "rollup": "rollup --config rollup.config.mjs",
+    "rollup": "rollup --config rollup.config.cjs",
     "jest": "jest --config jest.config.js",
     "storybook": "storybook dev -p 6006",
     "storybook:build": "storybook build"
@@ -44,21 +42,22 @@
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.1",
-    "@storybook/addon-essentials": "^8.4.2",
-    "@storybook/addon-interactions": "^8.4.2",
-    "@storybook/addon-onboarding": "^8.4.2",
+    "@storybook/addon-actions": "^8.4.4",
+    "@storybook/addon-controls": "^8.4.4",
+    "@storybook/addon-essentials": "^8.4.4",
+    "@storybook/addon-interactions": "^8.4.4",
+    "@storybook/addon-links": "^8.4.4",
+    "@storybook/addon-toolbars": "^8.4.4",
     "@storybook/addon-webpack5-compiler-swc": "^1.0.5",
-    "@storybook/blocks": "^8.4.2",
-    "@storybook/react": "^8.4.2",
-    "@storybook/react-vite": "8.4.2",
-    "@storybook/react-webpack5": "^8.4.2",
-    "@storybook/test": "^8.4.2",
+    "@storybook/blocks": "^8.4.4",
+    "@storybook/react": "^8.4.4",
+    "@storybook/react-webpack5": "^8.4.4",
+    "@storybook/test": "^8.4.4",
     "@testing-library/react": "^16.0.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^20.17.6",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
-    "@vitejs/plugin-react": "^4.3.3",
     "babel-jest": "^29.7.0",
     "file-loader": "^6.2.0",
     "jest": "^29.7.0",
@@ -67,7 +66,7 @@
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
-    "storybook": "^8.4.2",
+    "storybook": "^8.4.4",
     "tslib": "^2.8.1"
   }
 }
