--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "url": "https://github.com/DiamondLightSource/sci-react-ui.git"
   },
   "scripts": {
-    "build": "tsc -b && rollup --config rollup.config.cjs",
+    "build": "tsc -b && rollup --config rollup.config.mjs",
     "lint": "eslint .",
-    "rollup": "rollup --config rollup.config.cjs",
+    "rollup": "rollup --config rollup.config.mjs",
     "jest": "jest --config jest.config.js",
     "storybook": "storybook dev -p 6006",
     "storybook:build": "storybook build"
@@ -22,13 +22,13 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
-    "@mui/icons-material": "^6.1.6",
-    "@mui/material": "^6.1.6",
+    "@mui/icons-material": "^6.1.7",
+    "@mui/material": "^6.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "typescript": "^5.6.3",
-    "typescript-eslint": "^8.10.0"
+    "typescript-eslint": "^8.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
@@ -39,6 +39,7 @@
     "@material-ui/core": "^4.12.4",
     "@rollup/plugin-commonjs": "^28.0.1",
     "@rollup/plugin-image": "^3.0.3",
+    "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-node-resolve": "^15.3.0",
     "@rollup/plugin-terser": "^0.4.4",
     "@rollup/plugin-typescript": "^12.1.1",
@@ -62,11 +63,12 @@
     "file-loader": "^6.2.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "rollup": "^4.26.0",
+    "rollup": "^4.27.3",
     "rollup-plugin-dts": "^6.1.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "storybook": "^8.4.4",
     "tslib": "^2.8.1"
-  }
+  },
+  "packageManager": "pnpm@9.12.3+sha256.24235772cc4ac82a62627cd47f834c72667a2ce87799a846ec4e8e555e2d4b8b"
 }
