--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^4.0.2",
     "storybook": "^8.4.4",
+    "storybook-dark-mode": "^4.0.2",
     "tslib": "^2.8.1"
   },
   "packageManager": "pnpm@9.12.3+sha256.24235772cc4ac82a62627cd47f834c72667a2ce87799a846ec4e8e555e2d4b8b"
