--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "rollup": "rollup --config rollup.config.mjs",
     "jest": "jest --config jest.config.js",
     "storybook": "storybook dev -p 6006",
-    "storybook:build": "storybook build"
+    "storybook:build": "storybook build -o storybook-static",
+    "storybook:publish": "gh-pages -b storybook/publish -d storybook-static"
   },
   "main": "dist/index.cjs.js",
   "module": "dist/index.esm.js",
@@ -63,6 +64,7 @@
     "@types/react-dom": "^18.3.1",
     "babel-jest": "^29.7.0",
     "file-loader": "^6.2.0",
+    "gh-pages": "^6.2.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "rollup": "^4.27.3",
