--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint .",
     "rollup": "rollup --config rollup.config.mjs",
     "jest": "jest --config jest.config.js",
+    "jest:coverage": "jest --coverage",
     "storybook": "storybook dev -p 6006",
     "storybook:build": "storybook build -o storybook-static",
     "storybook:publish": "gh-pages -b storybook/publish -d storybook-static"
@@ -22,21 +23,17 @@
   "types": "dist/index.d.ts",
   "dependencies": {
     "@mui/icons-material": "^6.1.7",
+    "jest-transform-stub": "^2.0.0",
     "react-icons": "^5.3.0"
   },
   "peerDependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "@mui/material": "^6.1.7",
-    "@emotion/react": "^11.13.3",
-    "@emotion/styled": "^11.13.0"
-  },
-  "devDependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "@mui/material": "^6.1.7",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.7",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
+  },
+  "devDependencies": {
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
     "@babel/preset-react": "^7.25.9",
@@ -78,8 +75,7 @@
     "storybook-dark-mode": "^4.0.2",
     "tslib": "^2.8.1",
     "typescript": "^5.6.3",
-    "typescript-eslint": "^8.15.0",
-    "@testing-library/jest-dom": "^6.6.3"
+    "typescript-eslint": "^8.15.0"
   },
   "packageManager": "pnpm@9.12.3+sha256.24235772cc4ac82a62627cd47f834c72667a2ce87799a846ec4e8e555e2d4b8b"
 }
