--- a/.github/workflows/npm-publish.yaml
+++ b/.github/workflows/npm-publish.yaml
@@ -25,7 +25,7 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
+          node-version: '22.12.0'
           registry-url: https://registry.npmjs.org/
           scope: '@diamondlightsource'
           cache: pnpm
