--- a/.github/workflows/test-build.yaml
+++ b/.github/workflows/test-build.yaml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: ["20.x"]
+        node-version: ["22.12.0"]
 
     steps:
     - uses: actions/checkout@v4
