--- a/.github/workflows/deploy-storybook.yaml
+++ b/.github/workflows/deploy-storybook.yaml
@@ -40,4 +40,4 @@ jobs:
         checkout: false
         path: storybook/storybook-static
         install_command: echo Already done
-        build_command: pnpm build:storybook
+        build_command: pnpm storybook:build
