--- a/.github/workflows/deploy-storybook.yaml
+++ b/.github/workflows/deploy-storybook.yaml
@@ -38,6 +38,6 @@ jobs:
       uses: bitovi/github-actions-storybook-to-github-pages@v1.0.3
       with:
         checkout: false
-        path: storybook/storybook-static
+        path: storybook-static
         install_command: echo Already done
         build_command: pnpm storybook:build
