Package publishing improvements. (#19)
Package publishing improvements

--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@diamondlightsource/sci-react-ui",
   "version": "0.0.1",
-  "description": "A collection of react components based on MUI.",
   "type": "module",
-  "author": "DLS",
+  "description": "A theme and component library to make websites at scientific institutions simple to create.",
+  "author": "Diamond Light Source",
   "license": "ISC",
   "repository": {
     "type": "git",
