--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@diamondlightsource/sci-react-ui",
   "version": "0.0.1",
-  "type": "module",
   "description": "A theme and component library to make websites at scientific institutions simple to create.",
   "author": "Diamond Light Source",
   "license": "ISC",
@@ -21,7 +20,7 @@
     "storybook:build": "storybook build -o storybook-static",
     "storybook:publish": "gh-pages -b storybook/publish -d storybook-static"
   },
-  "main": "dist/index.cjs.js",
+  "main": "dist/index.js.js",
   "module": "dist/index.esm.js",
   "types": "dist/index.d.ts",
   "dependencies": {
