Add navbar tests, fix Jest/Babel configs (#25)
* Add navbar tests, fix Jest/Babel configs

Jest was declared as a module, but had no default export, this makes the Jest config a module. Babel has been made CommonJS, as it is the standard with this version of Babel

* Ignore CJS files in linter

* Ignore Babel config in ESLint config

* Use babel-jest transform

* Remove dev deps from build deps

* Revert to .js Babel config

--- a/.npmignore
+++ b/.npmignore
@@ -14,7 +14,7 @@ src/storybook/
 
 rollup.config.mjs
 jest.config.js
-babel.config.js
+babel.config.cjs
 tsconfig.json
 
 src/**/*.stories.*
@@ -22,3 +22,5 @@ src/**/*.test.*
 
 secret.txt
 diamondlightsource-sci-react-ui*.tgz
+
+tsconfig.tsbuildinfo
